--- a/src/components/Home/Header.css
+++ b/src/components/Home/Header.css
@@ -4,6 +4,17 @@
   flex-direction: column;
 }
 
+
+.bg_image {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-image: url('https://misc-site-storage.s3.us-east-2.amazonaws.com/background.png');
+  background-size: cover;
+  background-color: grey;
+  z-index: -100;
+}
+
 #typing-container {
   display: flex;
   font-size: 3vh;
